# almo_tools

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.markdown  example_class.C  example_class.h  example_class_main.C  indexing_test.C  indices.C  indices.h  printing.C  printing.h  pyarma.h  pybind.C  pybind.h  restricted_multiplication.C  restricted_multiplication.py  restricted_multiplication_main.C  typedefs.h  utils.C  utils.h
almo_tools/: fragment_ia_ranges.py  plot.py  restricted_multiplication.py
tests/: test_hardcoded.py
